--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.12.0",
+    "recharts": "^2.6.2",
     "sort-by": "^0.0.2",
     "swiper": "^9.3.2"
   },
